--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,36 @@
-textblob
 certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
+cycler==0.10.0
+decorator==4.3.0
 elasticsearch==6.3.1
 elasticsearch-dsl==6.3.1
 Flask==1.0.2
+gunicorn==19.9.0
 idna==2.7
+ipaddress==1.0.22
 itsdangerous==1.1.0
 Jinja2==2.10
+kiwisolver==1.0.1
+langdetect==1.0.7
+lxml==4.2.5
 MarkupSafe==1.1.0
+matplotlib==3.0.2
+nltk==3.3
+numpy==1.15.4
+oauthlib==2.1.0
+praw==6.0.0
+prawcore==1.0.0
+pyparsing==2.3.0
+PySocks==1.6.8
 python-dateutil==2.7.5
+pytz==2018.7
 requests==2.20.1
+requests-oauthlib==1.1.0
 six==1.11.0
+textblob==0.15.1
+tweepy==3.7.0
+update-checker==0.16
 urllib3==1.24.1
-gunicorn==19.9.0
+validators==0.12.3
 Werkzeug==0.14.1
