--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+atomicwrites==1.3.0
+attrs==18.2.0
 certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
@@ -16,15 +18,21 @@ langdetect==1.0.7
 lxml==4.2.5
 MarkupSafe==1.1.0
 matplotlib==3.0.2
+more-itertools==5.0.0
 nltk==3.3
 numpy==1.15.4
 oauthlib==2.1.0
+pendulum==2.0.4
+pluggy==0.8.1
 praw==6.0.0
 prawcore==1.0.0
+py==1.7.0
 pyparsing==2.3.0
 PySocks==1.6.8
+pytest==4.2.0
 python-dateutil==2.7.5
 pytz==2018.7
+pytzdata==2018.7
 requests==2.20.1
 requests-oauthlib==1.1.0
 six==1.11.0
